# arnmatch

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.md  arn_patterns.py  pyproject.toml
.github/workflows/: workflow.yml
codegen/: .gitignore  codegen.py  index_arn.py  index_cfn.py  index_cfn_resources.py  index_sdk.py  index_sdk_resources.py  scraper.py  sdk_services.py  utils.py  verify_cfn_coverage.py
codegen/cache/: CloudFormationResources.json  CloudFormationResourcesMissing.json  CloudFormationServices.json  SDKServices.json
codegen/rules/: arn_excludes.json  arn_excludes_resources.json  arn_includes.json  arn_overrides.json  cfn_excludes.json  cfn_overrides.json  cfn_resources_excludes.json  cfn_resources_overrides.json  sdk_excludes.json  sdk_overrides.json  sdk_resources_defaults.json  sdk_resources_overrides.json
docs/: CloudFormation.md
src/arnmatch/: __init__.py  arn_patterns.py
tests/: test_arnmatch.py
