[project]
name = "arnmatch"
dynamic = ["version"]
description = "arnmatch - parse AWS ARNs into structured data"
readme = "README.md"
authors = [
    { name = "Andrey Gubarev", email = "andrey@andreygubarev.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
arnmatch = "arnmatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/arnmatch/__init__.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
